--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,13 @@
         android:id="@+id/editText_main"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="312dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="Masukkan pesan kamu disini"
+        android:hint="Isi disini"
         android:inputType="textLongMessage|textAutoComplete"
-        app:layout_constraintEnd_toStartOf="@+id/button_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
